--- a/QWebSocket/index.html
+++ b/QWebSocket/index.html
@@ -9,7 +9,8 @@
     //BEGIN SETUP
     var HelloWorld;
     var helloWorld;
-    var buffer
+    var buffer, testDecode;
+
     protobuf.load("./lm.helloworld.proto", function (err, root) {
     // protobuf.load({root:"/data/NamespaceUpdated/CARTAvis/carta/cpp/core/Data/Image/", file:"lm.helloworld.proto"}, (err, root) => {
       if (err) throw err;
@@ -17,9 +18,22 @@
       HelloWorld = root.lookupType("lm.helloworld");
       console.log("HelloWorld", HelloWorld);
       helloWorld = HelloWorld.create({ id : "1", str : "hello" });
+      console.log('helloWorld: ', helloWorld);
       buffer = HelloWorld.encode(helloWorld).finish();
+      testDecode = HelloWorld.decode(buffer);
       console.log("Test encoding", buffer);
+      console.log("Test decoding", testDecode);
+
     });
+
+    function blobToArrayBuffer(blob) {
+      var fileReader = new FileReader();
+      return new Promise(function(resolve, reject) {
+         fileReader.onload = resolve;
+         fileReader.onerror = reject;
+         fileReader.readAsArrayBuffer(blob);
+      });
+    }
 
     function output(message) {
         var output = document.getElementById("output");
@@ -51,12 +65,24 @@
         output("WebSocket connected.");
       }
       socket.onmessage = function(msg) {
-        var result = msg.data;
-        console.log("Received message:", result);
-        var arraybuf = new TextEncoder("utf-8").encode(result);
-        console.log(arraybuf);
-        var helloWorld = HelloWorld.decode(arraybuf);
-        console.log('Decoding result:', helloWorld);
+        console.log("Received message:", msg.data);
+        blobToArrayBuffer(msg.data).then(buffer => {
+          console.log('buffer: ', buffer.explicitOriginalTarget.result);
+          var u8 = new Uint8Array(buffer.explicitOriginalTarget.result);
+          console.log('u8: ', u8);
+	        var helloWorld = HelloWorld.decode(u8);
+          console.log('Decoding result:', helloWorld);
+        });
+        // use the JS API to convert to the ArrayBuffer from BLOB.
+        // var fileReader = new FileReader();
+        // fileReader.onload = (event) => {
+        //   let arraybuf = this.result;
+          // };
+        // fileReader.readAsArrayBuffer(msg.data);
+        // console.log('Buffer converted: ', arraybuf);
+        // var helloWorld = HelloWorld.decode(arraybuf);
+        // console.log('Decoding result:', helloWorld);
+
       }
     }
     //END SETUP
@@ -81,7 +107,7 @@
     </style>
 </head>
 <body>
-  <textarea id="output"></textarea><br /> 
+  <textarea id="output"></textarea><br />
   <button onClick="sendMessage();">Send</button>
 </body>
 </html>
